--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.3.0",
-    "@mui/material": "^6.3.0",
+    "@mui/lab": "^6.0.0-beta.22",
+    "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.468.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.17.0",
     "react-spinners": "^0.15.0"
   },
